api: first support for key/value updates
